# vending-machine-type-safe

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: contracts.rs  di.rs  main.rs  terminals.rs
infrastructure/: Cargo.toml
infrastructure/src/: in_memory.rs  sqlite.rs
migrations/: 20240713202333_create_product_and_sale_tables.down.sql  20240713202333_create_product_and_sale_tables.up.sql
vending-machine/: Cargo.toml
vending-machine/src/: application.rs  domain.rs
