[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
vending-machine = { path = "../vending-machine" }
infrastructure = { path = "../infrastructure" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "chrono"] }
async-trait = { workspace = true }
yadir = { workspace = true, features = ["derive"] }
